/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
 * User Manual available at https://docs.gradle.org/7.1.1/userguide/building_java_projects.html
 */

plugins {
    id 'com.github.teruteru128.study.java-application-conventions'
    id 'org.javamodularity.moduleplugin' version '2.0.0' apply true
    // id 'org.bertx.jlink' version '3.1.1'
}

version = '1.5.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

application {
    mainModule = 'com.github.teruteru.study'
    mainClass = 'com.github.teruteru128.study.Main'
    applicationDefaultJvmArgs = [
            '-Xmx96G',
            '--enable-native-access=com.github.teruteru.study,com.github.teruteru.foreign.gmp,com.github.teruteru.foreign.opencl,com.github.teruteru.foreign.mpfr,com.github.teruteru.foreign.gmp,org.xerial.sqlitejdbc'
    ]
}

run {
    enableAssertions = true
}

dependencies {
    implementation project(':bitmessage')
    implementation project(':encode')
    implementation project(':foreign')
    implementation project(':gmp-msys2')
    implementation project(':mpfr')
    implementation project(':opencl')
    implementation project(':resources')
    implementation project(':time')

    // https://mvnrepository.com/artifact/org.apache.commons/commons-rng-simple
    implementation 'org.apache.commons:commons-rng-simple:1.6'

    // https://mvnrepository.com/artifact/org.apache.commons/commons-statistics-descriptive
    implementation 'org.apache.commons:commons-statistics-descriptive:1.2'

    // https://mvnrepository.com/artifact/org.apache.commons/commons-statistics-distribution
    implementation 'org.apache.commons:commons-statistics-distribution:1.2'

    // https://mvnrepository.com/artifact/commons-io/commons-io
    implementation 'commons-io:commons-io:2.21.0'

    // https://mvnrepository.com/artifact/org.bouncycastle/bcmail-jdk18on
    implementation 'org.bouncycastle:bcprov-jdk18on:1.83'

    // https://mvnrepository.com/artifact/com.twitter.twittertext/twitter-text
    implementation 'com.twitter.twittertext:twitter-text:3.1.0'

    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
    implementation 'org.slf4j:slf4j-api:2.0.17'

    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api
    implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.25.3'

    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
    implementation 'org.apache.logging.log4j:log4j-core:2.25.3'

    // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
    implementation 'org.xerial:sqlite-jdbc:3.51.1.0'

    // https://mvnrepository.com/artifact/org.postgresql/postgresql
    implementation 'org.postgresql:postgresql:42.7.8'

    // https://mvnrepository.com/artifact/tools.jackson.core/jackson-databind
    implementation 'tools.jackson.core:jackson-databind:3.0.3'

    // https://mvnrepository.com/artifact/tools.jackson.dataformat/jackson-dataformat-yaml
    implementation 'tools.jackson.dataformat:jackson-dataformat-yaml:3.0.3'

    // https://picocli.info/
    // https://mvnrepository.com/artifact/info.picocli/picocli
    implementation 'info.picocli:picocli:4.7.7'

    // https://mvnrepository.com/artifact/picocli-codegen/picocli
    annotationProcessor 'info.picocli:picocli-codegen:4.7.7'

    // https://mvnrepository.com/artifact/org.apache.tomcat.embed/tomcat-embed-core
    implementation 'org.apache.tomcat.embed:tomcat-embed-core:11.0.15'

    // https://mvnrepository.com/artifact/jakarta.servlet/jakarta.servlet-api
    compileOnly 'jakarta.servlet:jakarta.servlet-api:6.1.0'

    // https://mvnrepository.com/artifact/org.jetbrains/annotations
    implementation 'org.jetbrains:annotations:26.0.2-1'
}

compileJava {
    options.compilerArgs += ["-Aproject=${project.group}/${project.name}", "-implicit:class"]
}
